RTMP/ingest fix
